--- a/index.html
+++ b/index.html
@@ -439,8 +439,23 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-right-wrap">
+         
+          <form class="footer-form" action="">
+             <p class="sm-title">Subscribe</p>
+            <input class="footer-form-input" type="email" placeholder="E-mail">
+            <button class="footer-btn button" type="submit"> Subscribe
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+
       </div>
     </footer>
+
     <!--Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -449,6 +464,85 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
+       
+          <p class="contact-form-description">
+            Leave your contacts and we will call you back
+          </p>
+          <form class="contact-form">
+          <label class="contact-form-field">
+            <p class="contact-form-field-desc">Name</p>
+            <span class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="text"
+                name="user_name"
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
+                title="Volodymyr"
+                required
+              />
+              <svg class="contact-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="contact-form-field">
+            <p class="contact-form-field-desc">Phone</p>
+            <span class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="tel"
+                name="user_phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="contact-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="contact-form-field">
+            <p class="contact-form-field-desc">Email</p>
+            <span class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="email"
+                name="user_email"
+                required
+              />
+              <svg class="contact-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="contact-form-field">
+            <p class="contact-form-field-desc">Comment</p>
+            <textarea
+              class="contact-form-message"
+              name="user_message"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="contact-form-checkbox-label">
+            <input
+              class="contact-form-checkbox"
+              type="checkbox"
+              name="user_accept_policy"
+              required
+            />
+            <svg class="contact-form-own-checkbox" width="16" height="16">
+              <use href="./images/icons.svg#icon-check"></use>
+            </svg>
+            I accept the terms and conditions of the&nbsp;
+            <a class="accent-color" href="">Privacy Policy</a>
+          </label>
+          <button class="contact-form-btn" type="submit">Send</button>
+        </form>
+
+
       </div>
     </div>
     <!--End Modal window -->
