--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
         <div class="footer-right-wrap">
          
-          <form class="footer-form" action="">
+          <form class="footer-form">
              <p class="sm-title">Subscribe</p>
             <input class="footer-form-input" type="email" placeholder="E-mail">
             <button class="footer-btn button" type="submit"> Subscribe
@@ -471,7 +471,7 @@
           </p>
           <form class="contact-form">
           <label class="contact-form-field">
-            <p class="contact-form-field-desc">Name</p>
+            <span class="contact-form-field-desc">Name</span>
             <span class="contact-form-input-wrapper">
               <input
                 class="contact-form-input"
@@ -487,7 +487,7 @@
             </span>
           </label>
           <label class="contact-form-field">
-            <p class="contact-form-field-desc">Phone</p>
+            <span class="contact-form-field-desc">Phone</span>
             <span class="contact-form-input-wrapper">
               <input
                 class="contact-form-input"
@@ -504,7 +504,7 @@
           </label>
 
           <label class="contact-form-field">
-            <p class="contact-form-field-desc">Email</p>
+            <span class="contact-form-field-desc">Email</span>
             <span class="contact-form-input-wrapper">
               <input
                 class="contact-form-input"
@@ -519,7 +519,7 @@
           </label>
 
           <label class="contact-form-field">
-            <p class="contact-form-field-desc">Comment</p>
+            <span class="contact-form-field-desc">Comment</span>
             <textarea
               class="contact-form-message"
               name="user_message"
