--- a/portfolio.html
+++ b/portfolio.html
@@ -258,57 +258,64 @@
 
     <footer class="page-footer">
       <div class="container footer-wrap">
-              <div class="footer-left-wrap">
-            <a class="logo link footer-logo" href="./index.html">
-              web<span class="colored-logo">Studio</span></a
-            >
-            <p class="sm-title">
-              Increase the flow of customers and sales for your business with
-              digital marketing &#38; growth solutions.
-            </p>
-          </div>
-          <div class="footer-center-wrap">
-            <p class="sm-title">Social media</p>
-            <ul class="social-media list">
-              <li class="social-media-items">
-                <a href="#" class="social-link">
-                  <svg class="social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-instagram"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-media-items">
-                <a href="#" class="social-link">
-                  <svg class="social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-twitter"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-media-items">
-                <a href="#" class="social-link">
-                  <svg class="social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-facebook"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-media-items">
-                <a href="#" class="social-link">
-                  <svg class="social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-linkedin"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="footer-left-wrap">
+          <a class="logo link footer-logo" href="./index.html">
+            web<span class="colored-logo">Studio</span></a
+          >
+          <p class="sm-title">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#38; growth solutions.
+          </p>
         </div>
+        <div class="footer-center-wrap">
+          <p class="sm-title">Social media</p>
+          <ul class="social-media list">
+            <li class="social-media-items">
+              <a href="#" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-items">
+              <a href="#" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-items">
+              <a href="#" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-items">
+              <a href="#" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-right-wrap">
+         
+          <form class="footer-form">
+             <p class="sm-title">Subscribe</p>
+            <input class="footer-form-input" type="email" placeholder="E-mail">
+            <button class="footer-btn button" type="submit"> Subscribe
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+
+      </div>
     </footer>
+
   </body>
 </html>
