--- a/portfolio.html
+++ b/portfolio.html
@@ -302,14 +302,12 @@
         </div>
 
         <div class="footer-right-wrap">
-          <p class="sm-title">Subscribe</p>
+         
           <form class="footer-form">
-            <label class="footer-form-label">
-              <input class="footer-form-input" name="subscribe" type="email" placeholder="E-mail">
-            </label>
-           
+             <p class="sm-title">Subscribe</p>
+            <input class="footer-form-input" type="email" placeholder="E-mail">
             <button class="footer-btn button" type="submit"> Subscribe
-              <svg class="subscribe-icon" width="24" height="24">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
@@ -318,6 +316,7 @@
 
       </div>
     </footer>
+
 
   </body>
 </html>
