--- a/index.html
+++ b/index.html
@@ -441,9 +441,8 @@
         </div>
 
         <div class="footer-right-wrap">
-         
+          <p class="sm-title">Subscribe</p>
           <form class="footer-form">
-             <p class="sm-title">Subscribe</p>
             <input class="footer-form-input" type="email" placeholder="E-mail">
             <button class="footer-btn button" type="submit"> Subscribe
               <svg class="social-icon" width="24" height="24">
@@ -519,7 +518,7 @@
           </label>
 
           <label class="contact-form-field">
-            <span class="contact-form-field-desc">Comment</span>
+            <p class="contact-form-field-desc">Comment</p>
             <textarea
               class="contact-form-message"
               name="user_message"
