--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
           </label>
 
           <label class="contact-form-field">
-            <p class="contact-form-field-desc">Comment</p>
+            <span class="contact-form-field-desc">Comment</span>
             <textarea
               class="contact-form-message"
               name="user_message"
