--- a/portfolio.html
+++ b/portfolio.html
@@ -304,9 +304,11 @@
         <div class="footer-right-wrap">
           <p class="sm-title">Subscribe</p>
           <form class="footer-form">
-            <input class="footer-form-input" type="email" placeholder="E-mail">
+            <label class="footer-form-label">
+            <input class="footer-form-input" name="subscribe" type="email" placeholder="E-mail">
+          </label>
             <button class="footer-btn button" type="submit"> Subscribe
-              <svg class="social-icon" width="24" height="24">
+              <svg class="footer-btn-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
@@ -315,7 +317,6 @@
 
       </div>
     </footer>
-
 
   </body>
 </html>
