--- a/index.html
+++ b/index.html
@@ -476,7 +476,6 @@
         </p>
 
         <form class="contact-form">
-
           <div class="contact-form-wraper">
             <label class="contact-form-field" for="user-name"> Name </label>
             <div class="contact-form-input-wrapper">
@@ -494,50 +493,55 @@
               </svg>
             </div>
 
-            <label class="contact-form-field" for="user_phone"> Phone </label>
+            <label class="contact-form-field" for="user-phone"> Phone </label>
             <div class="contact-form-input-wrapper">
               <input
-              id="user_phone"
-              class="contact-form-input"
-              type="tel"
-              name="user_phone"
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xxx-xxx-xx-xx"
-              required
-            />
-            <svg class="contact-form-input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
+                id="user-phone"
+                class="contact-form-input"
+                type="tel"
+                name="user_phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="contact-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
             </div>
 
-            <label class="contact-form-field" for="user-name" for="user-email"> Email </label>
+            <label class="contact-form-field" for="user-email"> Email </label>
             <div class="contact-form-input-wrapper">
               <input
-              id="user-email"
-              class="contact-form-input"
-              type="email"
-              name="user_email"
-              required
-            />
-            <svg class="contact-form-input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
+                id="user-email"
+                class="contact-form-input"
+                type="email"
+                name="user_email"
+                required
+              />
+              <svg class="contact-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
             </div>
 
-
-            <label class="contact-form-field" for="user-name" for="user-comment"> Comment </label>
+            <label class="contact-form-field" for="user-comment">
+              Comment
+            </label>
             <div class="contact-form-input-wrapper">
-              <textarea  id="user-comment"
-              class="contact-form-message"
-              name="user_message"
-              placeholder="Text input"
-            ></textarea>
+              <textarea
+                id="user-comment"
+                class="contact-form-message"
+                name="user_message"
+                placeholder="Text input"
+              ></textarea>
             </div>
 
-          
-          </div>
-          <label class="contact-form-checkbox-label">
+            <label class="contact-form-checkbox-label" for="checkbox"
+              >I accept the terms and conditions of the&nbsp;
+              <a class="accent-color" href="">Privacy Policy</a>
+            </label>
+            <div class="contact-form-input-wrapper"></div>
             <input
+              id="checkbox"
               class="contact-form-checkbox"
               type="checkbox"
               name="user_accept_policy"
@@ -546,9 +550,7 @@
             <svg class="contact-form-own-checkbox" width="16" height="16">
               <use href="./images/icons.svg#icon-check"></use>
             </svg>
-            I accept the terms and conditions of the&nbsp;
-            <a class="accent-color" href="">Privacy Policy</a>
-          </label>
+          </div>
           <button class="contact-form-btn" type="submit">Send</button>
         </form>
       </div>
