--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
                 id="user-name"
                 class="contact-form-input"
                 type="text"
-                name="user_name"
+                name="user-name"
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
                 title="Volodymyr"
                 required
               />
-              <svg class="contact-form-input-icon" width="18" height="18">
+              <svg class="contact-form-input-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -499,12 +499,12 @@
                 id="user-phone"
                 class="contact-form-input"
                 type="tel"
-                name="user_phone"
+                name="user-phone"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
                 required
               />
-              <svg class="contact-form-input-icon" width="18" height="18">
+              <svg class="contact-form-input-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -515,10 +515,10 @@
                 id="user-email"
                 class="contact-form-input"
                 type="email"
-                name="user_email"
+                name="user-email"
                 required
               />
-              <svg class="contact-form-input-icon" width="18" height="18">
+              <svg class="contact-form-input-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -530,7 +530,7 @@
               <textarea
                 id="user-comment"
                 class="contact-form-message"
-                name="user_message"
+                name="user-message"
                 placeholder="Text input"
               ></textarea>
             </div>
@@ -544,7 +544,7 @@
               id="checkbox"
               class="contact-form-checkbox"
               type="checkbox"
-              name="user_accept_policy"
+              name="user-accept-policy"
               required
             />
             <svg class="contact-form-own-checkbox" width="16" height="16">
