--- a/index.html
+++ b/index.html
@@ -488,11 +488,13 @@
                 title="Volodymyr"
                 required
               />
-              <svg class="contact-form-input-icon" width="24" height="24">
+              <svg class="contact-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
+          </div>
 
+          <div class="contact-form-wraper">
             <label class="contact-form-field" for="user-phone"> Phone </label>
             <div class="contact-form-input-wrapper">
               <input
@@ -508,7 +510,9 @@
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
+          </div>
 
+          <div class="contact-form-wraper">
             <label class="contact-form-field" for="user-email"> Email </label>
             <div class="contact-form-input-wrapper">
               <input
@@ -522,7 +526,9 @@
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
+          </div>
 
+          <div class="contact-form-wraper">
             <label class="contact-form-field" for="user-comment">
               Comment
             </label>
@@ -534,7 +540,8 @@
                 placeholder="Text input"
               ></textarea>
             </div>
-
+          </div>
+          
             <label class="contact-form-checkbox-label" for="checkbox"
               >I accept the terms and conditions of the&nbsp;
               <a class="accent-color" href="">Privacy Policy</a>
@@ -550,7 +557,7 @@
             <svg class="contact-form-own-checkbox" width="16" height="16">
               <use href="./images/icons.svg#icon-check"></use>
             </svg>
-          </div>
+          
           <button class="contact-form-btn" type="submit">Send</button>
         </form>
       </div>
