--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </svg>
               </div>
               <h3 class="benefits-card-title">Strategy</h3>
-              <p class="card-text">
+              <p class="benefits-card-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -100,7 +100,7 @@
                 </svg>
               </div>
               <h3 class="benefits-card-title">Punctuality</h3>
-              <p class="card-text">
+              <p class="benefits-card-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -112,7 +112,7 @@
                 </svg>
               </div>
               <h3 class="benefits-card-title">Diligence</h3>
-              <p class="card-text">
+              <p class="benefits-card-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -124,7 +124,7 @@
                 </svg>
               </div>
               <h3 class="benefits-card-title">Technologies</h3>
-              <p class="card-text">
+              <p class="benefits-card-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
