--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -135,13 +134,14 @@
       <!-- End Benefits -->
 
       <!--What are we doing -->
-      <!-- <section class="services-section">
+      <section class="services-section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="services list">
             <li class="services-item">
               <img
                 class="services-img"
+                srcset="./images/service1.jpg 1x, ./images/service1@2x.jpg 2x"
                 src="./images/service1.jpg"
                 alt="Mac"
                 width="360"
@@ -151,6 +151,7 @@
             <li class="services-item">
               <img
                 class="services-img"
+                srcset="./images/service2.jpg 1x, ./images/service2@2x.jpg 2x"
                 src="./images/service2.jpg"
                 alt="Mobile"
                 width="360"
@@ -160,6 +161,7 @@
             <li class="services-item">
               <img
                 class="services-img"
+                srcset="./images/service3.jpg 1x, ./images/service3@2x.jpg 2x"
                 src="./images/service3.jpg"
                 alt="Mobile with laptop"
                 width="360"
@@ -168,17 +170,18 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--End What are we doing -->
 
       <!-- Our Team -->
-      <!-- <section class="team-section section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team list">
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/worker1.jpg 1x, ./images/worker1@2x.jpg 2x"
                 src="./images/worker1.jpg"
                 alt="emploee Mark Guerrero"
                 width="264"
@@ -222,6 +225,7 @@
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/worker2.jpg 1x, ./images/worker2@2x.jpg 2x"
                 src="./images/worker2.jpg"
                 alt="emploee Tom Ford"
                 width="264"
@@ -265,6 +269,7 @@
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/worker3.jpg 1x, ./images/worker3@2x.jpg 2x"
                 src="./images/worker3.jpg"
                 alt="emploee Camila Garcia"
                 width="264"
@@ -308,6 +313,7 @@
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/worker4.jpg 1x, ./images/worker4@2x.jpg 2x"
                 src="./images/worker4.jpg"
                 alt="emploee Daniel Wilson"
                 width="264"
@@ -350,11 +356,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--End Our Team -->
 
       <!--Customers-->
-      <!-- <section class="customers-section section">
+      <section class="customers-section section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers list">
@@ -402,11 +408,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--End Customers -->
     </main>
 
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container footer-wrap">
         <div class="footer-left-wrap">
           <a class="logo link footer-logo" href="./index.html">
@@ -471,7 +477,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!--Mobile-menu -->
     <div class="mobile-menu js-menu-container" id="mobile-menu">
@@ -479,7 +485,7 @@
         <button
           type="button"
           class="mobile-menu-close-btn button js-close-menu"
-             >
+        >
           <svg class="close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -487,10 +493,14 @@
         <nav class="mobile-menu-nav">
           <ul class="mobile-menu-list list">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link link active" href="./index.html">Studio</a>
+              <a class="mobile-menu-link link active" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="mobile-menu-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="mobile-menu-item">
               <a class="mobile-menu-link link" href="">Contacts</a>
@@ -502,7 +512,9 @@
           <address class="mobile-address">
             <ul class="mobile-menu-address-list list">
               <li class="mobile-menu-address-item">
-                <a class="mobile-menu-phone mobile-menu-adress-link link" href="tel:+110001111111"
+                <a
+                  class="mobile-menu-phone mobile-menu-adress-link link"
+                  href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -546,11 +558,7 @@
               </a>
             </li>
           </ul>
-
         </div>
-      
-
-
       </div>
     </div>
     <!--End Mobile-menu-->
